# shishua_rs

./: Cargo.toml  practrand.sh
benches/: bench.rs
examples/: shishua.rs
src/: core.rs  lib.rs  rand.rs
